[package]
name = "eins"
version = "0.1.0"
edition = "2024"

[dependencies]
bimap = "0.6.3"
futures-channel = "0.3.31"
futures-util = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
tokio-util = "0.7.14"
eframe = "0.32"
local-ip-address = "0.6.5"
image = "0.24"
egui_extras = { version = "0.32", features = ["all_loaders"] }

